@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2851533 by drunken monkey: Adapted the tests to the latest Core changes.
 - #2491175 by drunken monkey, ptmkenny: Added a new "Entity status" processor
   to replace "Node status".
 - #2681273 by drunken monkey, borisson_: Added plugin descriptions consistently
